#### black ####################################################################
[tool.black]
line-length = 80
skip-magic-trailing-comma = true
target-version = ["py37"]

#### coverage #################################################################
[tool.coverage]

[tool.coverage.run]
branch = true
data_file = ".coverage/data"
source = ["app"]

[tool.coverage.report]
fail_under = 100.0
skip_covered = true
skip_empty = true

[tool.coverage.html]
directory = ".coverage/html"

#### isort ####################################################################
[tool.isort]
atomic = true
case_sensitive = true
float_to_top = true
force_single_line = true
line_length = 80
lines_after_imports = 2
profile = "black"
remove_redundant_aliases = true
skip_gitignore = true

#### poetry ###################################################################
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hypothesis-faker"
version = "0.1.6"
description = "faker providers wrapped as hypothesis strategies"
authors = ["Derek Wan <d.wan@icloud.com>"]
license = "MIT"
homepage = "https://github.com/dycw/hypothesis-faker"

[tool.poetry.dependencies]
python = "^3.7"
"backports.cached-property" = "^1.0.1"
faker = "^13.11.0"
hypothesis = "^6.14.0"
writer-cm = "^1.1.1"
xdg = "^5.1.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
bump2version = "^1.0.1"
coverage = { extras = ["toml"], version = "^6.3.2" }
flake8 = "^4.0.1"
flake8-absolute-import = "^1.0.0.1"
flake8-annotations = "^2.9.0"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.4.25"
flake8-comprehensions = "^3.8.0"
flake8-debugger = "^4.1.2"
flake8-eradicate = "^1.2.1"
flake8-no-pep420 = "^2.2.0"
flake8-pie = "^0.15.0"
flake8-print = "^5.0.0"
flake8-simplify = "^0.19.2"
flake8-unused-arguments = "^0.0.10"
isort = "^5.10.1"
nox = "^2022.1.7"
poetry-deps-scanner = "^1.0.1"
pre-commit = "^2.18.1"
pyclean = "^2.2.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-instafail = "^0.4.2"
pytest-xdist = "^2.5.0"
tempenv = "^2.0.0"

#### pyright ##################################################################
[tool.pyright]
include = ["src"]
pythonVersion = "3.7"
executionEnvironments = [{ root = "src" }]
typeCheckingMode = "strict"
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUntypedBaseClass = false
reportImplicitStringConcatenation = "error"
reportMissingSuperCall = "error"
reportPropertyTypeMismatch = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedCallResult = "error"

#### pytest ###################################################################
[tool.pytest.ini_options]
addopts = [
  "-rsxX",
  "--color=auto",
  "--cov=hypothesis_faker",
  "--cov-report=html",
  "--strict-markers"
]
filterwarnings = ["error", "ignore::DeprecationWarning"]
looponfailroots = ["src"]
minversion = "7.0"
testpaths = ["src/tests"]
xfail_strict = true
